fix spurious horiz scrollbar on home page

--- a/sass/theme/_homepage_theme.scss
+++ b/sass/theme/_homepage_theme.scss
@@ -38,7 +38,7 @@
         margin: 0;
         padding: 0.5rem;
         text-align: center;
-        width: 100vw;
+        width: 100%;
     }
 
     .jumbotron-fluid {
